--- a/Sas/angular.json
+++ b/Sas/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Saas": {
+    "Sas": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Saas",
+            "outputPath": "dist/Sas",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -50,18 +50,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Saas:build"
+            "browserTarget": "Sas:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Saas:build:production"
+              "browserTarget": "Sas:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Saas:build"
+            "browserTarget": "Sas:build"
           }
         },
         "test": {
@@ -95,7 +95,7 @@
         }
       }
     },
-    "Saas-e2e": {
+    "Sas-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -103,11 +103,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Saas:serve"
+            "devServerTarget": "Sas:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Saas:serve:production"
+              "devServerTarget": "Sas:serve:production"
             }
           }
         },
@@ -123,5 +123,5 @@
       }
     }
   },
-  "defaultProject": "Saas"
+  "defaultProject": "Sas"
 }
